--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
-html, body {
+/* html, body {
   height: 100%;
   width: 100%;
+} */
+.error {
+  background: red;
+}
+.razrError {
+  margin-left: 10px;
+  color: red;
+
 }
